[gd_scene load_steps=17 format=2]

[ext_resource path="res://Imagens/Setas/botaoPlay.png" type="Texture" id=1]
[ext_resource path="res://Imagens/Setas/seta__baixo.png" type="Texture" id=2]
[ext_resource path="res://Imagens/Setas/seta__cima.png" type="Texture" id=3]
[ext_resource path="res://Codigos/principal.gd" type="Script" id=4]
[ext_resource path="res://Imagens/Setas/seta__direita.png" type="Texture" id=5]
[ext_resource path="res://Imagens/Setas/seta__esquerda.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 0.0313726 )

[sub_resource type="StyleBoxTexture" id=10]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 0.0313726 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 0.0313726 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0, 0, 0.0313726 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Interface" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 833.0
margin_right = 1900.0
margin_bottom = 1060.0
color = Color( 0, 0, 0, 0.196078 )

[node name="botaoEsquerda" type="Button" parent="."]
margin_left = 32.0
margin_top = 833.0
margin_right = 262.0
margin_bottom = 1055.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 6 )
icon_align = 1

[node name="botaoDireita" type="Button" parent="."]
margin_left = 270.0
margin_top = 833.0
margin_right = 500.0
margin_bottom = 1055.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 5 )
icon_align = 1

[node name="botaoCima" type="Button" parent="."]
margin_left = 769.0
margin_top = 833.0
margin_right = 999.0
margin_bottom = 1055.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 3 )
icon_align = 1

[node name="botaoBaixo" type="Button" parent="."]
margin_left = 524.0
margin_top = 833.0
margin_right = 754.0
margin_bottom = 1055.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 2 )
icon_align = 1

[node name="botaoIniciar" type="Button" parent="."]
margin_left = 1626.0
margin_top = 840.0
margin_right = 1826.0
margin_bottom = 1054.0
rect_scale = Vector2( 1.2, 1 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
icon = ExtResource( 1 )
icon_align = 1

[connection signal="pressed" from="botaoEsquerda" to="." method="_on_botaoEsquerda_pressed"]
[connection signal="pressed" from="botaoDireita" to="." method="_on_botaoDireita_pressed"]
[connection signal="pressed" from="botaoCima" to="." method="_on_botaoCima_pressed"]
[connection signal="pressed" from="botaoBaixo" to="." method="_on_botaoBaixo_pressed"]
[connection signal="pressed" from="botaoIniciar" to="." method="_on_botaoIniciar_pressed"]
